--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "styled-native-breakpoint-for-web",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "Add breakpoints to your styled components to use for the web in your Universal Expo Web project",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "babel src --out-dir dist --ignore example"
+  },
   "repository": "https://github.com/bidah/styled-native-breakpoint-for-web",
   "bugs": {
     "url": "https://github.com/bidah/styled-native-breakpoint-for-web/issues"
@@ -14,23 +17,23 @@
   "peerDependencies": {
     "fbjs": "*",
     "react-native": "*",
-    "styled-components": "*"
+    "styled-components": ">= 4"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "babel-preset-expo": "^5.2.0",
+    "metro-react-native-babel-preset": "^0.56.0",
     "styled-components": "5.0.0-beta.8"
   },
   "keywords": [
     "expo",
-    "react-native-web",
+    "react",
     "react-native",
+    "react-native-web",
     "styled-components",
     "breakpoints",
-    "media-queries",
-    "react",
-    "style"
+    "media-queries"
   ]
 }
