--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
   "license": "MIT",
   "private": false,
   "peerDependencies": {
-    "fbjs": "*",
+    "react": ">= 16.8",
     "react-native": "*",
     "styled-components": ">= 4"
   },
   "devDependencies": {
+    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react": "^16.9.0",
+    "styled-components": "5.0.0-beta.8",
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "babel-preset-expo": "^5.2.0",
-    "metro-react-native-babel-preset": "^0.56.0",
-    "styled-components": "5.0.0-beta.8"
+    "metro-react-native-babel-preset": "^0.56.0"
   },
   "keywords": [
     "expo",
@@ -35,5 +37,8 @@
     "styled-components",
     "breakpoints",
     "media-queries"
-  ]
+  ],
+  "dependencies": {
+    "@babel/runtime": "^7.5.5"
+  }
 }
